# go-lib

./: .gitignore  CHRONICLE.md  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.claude/memory/: MEMORY.md  project_porting_state.md
.github/: tag.yml
.github/workflows/: ci.yml  tag.yml
docs/: porting-plan.md  v2-roadmap.md
examples/: attr_run.rs  cond.rs  hello.rs  main_exitcode.rs  main_result.rs  pipeline.rs  scope.rs  scope_channel.rs  select_fanin.rs  stress_drain_select.rs  stress_drain_timer.rs  stress_stopm_strand.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: chan.rs  context.rs  go_macro.rs  lib.rs  loom_shim.rs  net.rs  net_windows.rs  scope.rs  select.rs
src/runtime/: asm_amd64.rs  asm_arm64.rs  g.rs  m.rs  mod.rs  netpoll.rs  p.rs  park.rs  rawmutex.rs  rcu.rs  sched.rs  stack.rs  sudog.rs  syscall.rs  sysmon.rs  time.rs
src/sync/: cond.rs  mod.rs  waitgroup.rs
tests/: integration.rs  net.rs
