# SPDX-License-Identifier: Apache-2.0
[workspace]
members  = [".", "macros"]
resolver = "2"

[package]
name = "go-lib"
version = "0.3.2"
edition = "2024"
authors = ["berryware"]
description = "rust native goroutines"
license = "Apache-2.0"
keywords = ["goroutines", "waitgroup"]
repository = "https://github.com/exaxisllc/go-lib"
readme = "README.md"
exclude = ["target"]
categories = ["asynchronous"]

[dependencies]
libc           = "0.2"
go-lib-macros  = "0.3.2"

[dev-dependencies]
# Systematic concurrency model checker — explores all thread interleavings.
# Used via `cargo test --cfg loom` (see .github/workflows/ci.yml).
loom = "0.7"

# Tell Cargo that `--cfg loom` is an expected cfg key, suppressing the
# "unexpected_cfgs" warning that would otherwise fire on every #[cfg(loom)].
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }
