# SPDX-License-Identifier: Apache-2.0
[package]
name = "go-lib-macros"
version = "0.4.2"
edition = "2024"
authors = ["berryware"]
description = "Procedural macros for go-lib (#[go_lib::main])"
license = "Apache-2.0"
repository = "https://github.com/exaxisllc/go-lib"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote       = "1"
syn         = { version = "2", features = ["full"] }
